--- a/src/components/Nav/Nav.css
+++ b/src/components/Nav/Nav.css
@@ -1,3 +1,10 @@
+.logo {
+    height: 30vh;
+    background-image: url('./../images/Logo.PNG');
+    background-repeat: no-repeat;
+    background-color: black;
+    background-position: center
+}
 nav {
     display: flex;
     justify-content: space-around;
@@ -18,6 +25,9 @@ nav {
 }
 #login {
     float: right;
-    margin-right: 10px;
-    margin-top: 4px;
+    margin-right: 3vw;
+    margin-top: 4vh;
+    height: 35px;
+    width: 60px;
+    border-radius: 5px
 }
