--- a/src/App.css
+++ b/src/App.css
@@ -1,19 +1,11 @@
-.App {
-  text-align: center;
+#app {
+  background-color: white;
+  background-image: url('./components/images/injury_image.jpg');
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-position-y: 270px;
+  height: 100vh
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
 
