--- a/src/components/Calendar/calendar.css
+++ b/src/components/Calendar/calendar.css
@@ -6,10 +6,19 @@
     padding: 5px;
     width: 65vw;
     margin: 1px;
+    margin-left: 5vw;
 }
 #time {
     width: 100px
 }
 .timeslot p {
     width: 200px;
+}
+h4 {
+    font-size: 30px;
+}
+.date {
+    margin: 15px 15vw;
+    display: flex;
+    justify-content: space-between
 }
