--- a/src/components/Home/home.css
+++ b/src/components/Home/home.css
@@ -1,5 +1,21 @@
 h1 {
-    font-size: 4vw;
+    font-size: 40px;
     text-align: center;
-    margin: 5vh;
+    margin-top: 5vh;
+}
+h5 {
+    text-align: center;
+    margin: 15px 0 40px 0;
+    font-size: 30px;
+}
+p {
+    margin-left: 15vw;
+    font-size: 22px;
+}
+#treatments {
+    margin-left: 25vw;
+    font-size: 18px
+}
+#invite {
+    margin-top: 10vh
 }
