--- a/src/components/Nav/Nav.css
+++ b/src/components/Nav/Nav.css
@@ -1,15 +1,16 @@
 .logo {
-    height: 30vh;
+    height: 200px;
     background-image: url('./../images/Logo.PNG');
     background-repeat: no-repeat;
     background-color: black;
-    background-position: center
+    background-position: center;
+    /* background-size: contain */
 }
 nav {
     display: flex;
     justify-content: space-around;
-    background-color: blue;
-    height: 26px;
+    background-color: gold;
+    height: 28px;
     font-size: 24px;
     list-style: none;
 }
@@ -17,11 +18,17 @@ nav {
     height: 26px;
     overflow:hidden;
     transition: 1s;
-    background-color: blue;
+    background-color: gold;
     z-index: 10;
 }
+ul li{
+    margin-top: 10px
+}
+li { 
+    margin: 2px 2px
+}
 .drop-content:hover {
-    height: 110px;
+    height: 140px;
 }
 #login {
     float: right;
