--- a/src/components/Calendar/calendar.css
+++ b/src/components/Calendar/calendar.css
@@ -6,13 +6,14 @@
     padding: 5px;
     width: 65vw;
     margin: 1px;
-    margin-left: 5vw;
+    margin-left: 15vw;
 }
 #time {
     width: 100px
 }
 .timeslot p {
     width: 200px;
+    font-size: 18px
 }
 h4 {
     font-size: 30px;
